# Robot-Path-Controller-

./: .gitignore  README.md  REPORT.md  push_to_github.ps1  run_simulation.py
ros2_pkg/: package.xml  setup.cfg  setup.py
ros2_pkg/launch/: bringup_launch.py
ros2_pkg/ros2_pkg/: README_ROS2.md  __init__.py  controller_node.py  robot_simulator_node.py  trajectory_publisher.py  visualizer_node.py
src/: controller.py  debug_sim.py  demo.py  map_utils.py  ros2_simulation.py  simulator.py  smoothing.py  trajectory.py
tests/: test_smoothing.py  test_trajectory.py
