<?xml version="1.0"?>
<package format="3">
  <name>ros2_pkg</name>
  <version>0.0.0</version>
  <description>ROS2 integration package for Path Smoothing and Trajectory Control demo (Python)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>
